<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:paddingBottom="5dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="5dp"
    
    tools:context=".Relations" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/gradient" >

        <TextView
            android:id="@+id/title_m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="Verdana"
            android:text="@string/title_relation"                        
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:contentDescription="@string/add"
            android:src="@android:drawable/ic_input_add" />

        <ImageButton
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/edit"
            android:src="@android:drawable/ic_menu_edit" />
    </FrameLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="48dp"
        android:fontFamily="Verdana"
        android:gravity="center"
        android:text="@string/welcome"
        
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="17sp"
        android:textStyle="bold" />

    <FrameLayout
	    android:layout_width="match_parent"
	    android:layout_height="50dp"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentLeft="true"
	    android:background="@drawable/gradient" >

	    <ImageButton
	        android:id="@+id/help"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:contentDescription="@string/help"
	        android:src="@android:drawable/ic_menu_help" />

	    <ImageView
	        android:id="@+id/mic"
	        android:layout_width="50dp"
	        android:layout_height="40dp"
	        android:layout_gravity="right"
	        android:contentDescription="@string/mic"
	        android:src="@android:drawable/ic_btn_speak_now" />

	</FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout1"
        android:layout_width="fill_parent"
        android:layout_height="95dp"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="14dp"
        android:background="@drawable/textlines"
        android:clickable="true" >

        <ImageView
            android:id="@+id/pic1_gma"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:background="@drawable/gma_sm"
            android:contentDescription="@string/gma_icon"
            android:paddingBottom="0dp"
            android:paddingLeft="5dp"
            android:paddingRight="10dp"
            android:paddingTop="0dp" />

        <TextView
            android:id="@+id/gma_txt"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:contentDescription="@string/gma_name"
            android:ems="10"
            android:paddingTop="15dp"
            android:text="@string/gma_name"
            
            
            android:textSize="30sp"
            android:width="200dp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="fill_parent"
        android:layout_height="95dp"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/frameLayout1"
        android:background="@drawable/textlines" >

        <ImageView
            android:id="@+id/ph_icon2"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/ph2"
            android:paddingBottom="0dp"
            android:paddingLeft="5dp"
            android:paddingRight="10dp"
            android:paddingTop="0dp"
            android:src="@drawable/person_placeholder" />

        <TextView
            android:id="@+id/memory_txt2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/ph2"
            android:ems="10"
            android:text="@string/ph1"
            
            
            android:textSize="30sp"
            android:width="200dp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout3"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/frameLayout2"
        android:background="@drawable/textlines" >

        <ImageView
            android:id="@+id/ph_icon3"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/gma_icon"
            android:paddingBottom="0dp"
            android:paddingLeft="5dp"
            android:paddingRight="10dp"
            android:paddingTop="0dp"
            android:src="@drawable/person_placeholder" />

        <TextView
            android:id="@+id/memory_txt3"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/ph1"
            android:ems="10"
            android:text="@string/ph2"
            
            
            android:textSize="30sp"
            android:width="200dp" />
    </FrameLayout>

</RelativeLayout>