<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:gravity="bottom"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="5dp"
    android:scrollbarStyle="insideOverlay"
    android:scrollbars="vertical"
    android:textAlignment="center"
    tools:context=".Relations" >

	<FrameLayout
	    android:layout_width="fill_parent"
	    android:layout_height="50dp"
	    android:background="@drawable/gradient" >

    <TextView
        android:id="@+id/title_m"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="Verdana"
        android:text="@string/title_memories"
        android:textAlignment="gravity"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        android:textStyle="bold" />

	 <ImageButton
	     android:id="@+id/add"
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:layout_gravity="right"
	     android:contentDescription="@string/add"
	     android:src="@android:drawable/ic_input_add" />

    <ImageButton
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/edit"
        android:src="@android:drawable/ic_menu_edit" />

    </FrameLayout>
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="48dp"
        android:fontFamily="Verdana"
        android:gravity="center"
        android:text="@string/memory_inst"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:layout_below="@+id/textView1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="300dp"
            android:orientation="vertical"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="vertical" >

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:background="@drawable/textlines"
                android:clickable="true" >

                <ImageView
                    android:id="@+id/pic1_gma"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/gma_icon"
                    android:paddingBottom="0dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="10dp"
                    android:paddingTop="0dp"
                    android:src="@drawable/gma_sm" />

                <TextView
                    android:id="@+id/gma_txt"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="35dp"
                    android:clickable="true"
                    android:contentDescription="@string/gma_name"
                    android:ems="10"
                    android:text="@string/memory1"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="30sp" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:background="@drawable/textlines" >

                <ImageView
                    android:id="@+id/pic2_gma"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/gma_icon"
                    android:paddingBottom="0dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="10dp"
                    android:paddingTop="0dp"
                    android:src="@drawable/gma_sm" />

                <TextView
                    android:id="@+id/memory_txt2"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="35dp"
                    android:clickable="true"
                    android:contentDescription="@string/gma_name"
                    android:ems="10"
                    android:text="@string/memory2"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="30sp" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:background="@drawable/textlines" >

                <ImageView
                    android:id="@+id/pic3_gma"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/gma_icon"
                    android:paddingBottom="0dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="10dp"
                    android:paddingTop="0dp"
                    android:src="@drawable/gma_sm" />

                <TextView
                    android:id="@+id/memory_txt3"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="15dp"
                    android:clickable="true"
                    android:contentDescription="@string/ph1"
                    android:ems="10"
                    android:text="@string/memory3"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="30sp" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:background="@drawable/textlines" >

                <ImageView
                    android:id="@+id/pic4_gma"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/gma_icon"
                    android:paddingBottom="0dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="10dp"
                    android:paddingTop="0dp"
                    android:src="@drawable/gma_sm" />

                <TextView
                    android:id="@+id/memory_txt4"
                    android:layout_width="200dp"
                    android:layout_height="78dp"
                    android:layout_gravity="right"
                    android:layout_marginTop="15dp"
                    android:clickable="true"
                    android:contentDescription="@string/ph1"
                    android:ems="10"
                    android:text="@string/memory4"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="30sp" />
            </FrameLayout>
        </LinearLayout>
    </ScrollView>

	<FrameLayout
	    android:layout_width="match_parent"
	    android:layout_height="50dp"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentLeft="true"
	    android:background="@drawable/gradient" >

	    <ImageButton
	        android:id="@+id/help"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:contentDescription="@string/help"
	        android:src="@android:drawable/ic_menu_help" />

	    <ImageView
	        android:id="@+id/mic"
	        android:layout_width="50dp"
	        android:layout_height="40dp"
	        android:layout_gravity="right"
	        android:contentDescription="@string/mic"
	        android:src="@android:drawable/ic_btn_speak_now" />

	</FrameLayout>

</RelativeLayout>