<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/help_pu"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#444444"
    android:orientation="vertical"
    android:padding="10sp" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/helpTxt"
                android:textColor="#fff" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_close_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scrollView1"
        android:layout_gravity="left"
        android:layout_marginTop="5dp"
        android:text="@string/close" />


    <ImageButton
        android:id="@+id/ttsOn"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/scrollView1"
        android:contentDescription="@string/tts"
        android:layout_marginTop="5dp"
        android:src="@android:drawable/ic_lock_silent_mode_off" />

</RelativeLayout>
